[tool.poetry]
name = "mhealth_anomaly_detection"
version = "0.1.0"
description = ""
authors = ["Samir Akre <samir.akre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
flake8 = "^5.0.4"
scikit-learn = "^1.1.3"
ipykernel = "^6.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
