[tool.poetry]
name = "mhealth_anomaly_detection"
version = "0.1.2"
description = ""
authors = ["Samir Akre <samir.akre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"
ipykernel = "^6.19.2"
tqdm = "^4.64.1"
seaborn = "^0.12.1"
p-tqdm = "^1.4.0"
colour = "^0.1.5"
autopep8 = "^2.0.2"
altair = "^5.0.0"
rpy2 = "^3.5.12"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
